<resources>
    <string name="app_name">PRAC2</string>
    <string name="regist_number">Phone number</string>
    <string name="regist_email">Email Address</string>
    <string name="regist_Google">Continue with Google</string>
    <string name="without_registr">Continue without registration</string>
    <string name="info_description">Used for more information</string>
    <string name="company_namme">#Company name#</string>
    <string name="greetings">Hello world! Have Fun.</string>
    <string name="regist">Choose the registration form:</string>
    <string name="enter_name">Please enter your name:</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="tasks">Tasks</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="allcourses">All courses:</string>
    <string name="code">Code</string>
    <string name="art">Art</string>
    <string name="math">Math</string>
    <string name="someName">NAME</string>
    <string name="exit_button">Used to exit the panel.</string>
    <string name="logout_button">Used to logout.</string>
    <string name="for_map_button">Used to open the progress map.</string>
    <string name="for_open_panel_button">Used to open the panel.</string>
    <string name="for_profile_button">Used to open your profile.</string>
    <string name="for_settings_button">Used to open settings.</string>
    <string name="for_notifications_button">Used to open notifications.</string>
    <string name="for_messages_button">Used to open messages.</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>