<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/uuuuuuu"
    android:orientation="vertical">


    <ImageButton
        android:contentDescription="@string/for_open_panel_button"
        android:id="@+id/open_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/cardview_shadow_end_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_start_24" />

    <ImageButton
        android:contentDescription="@string/for_notifications_button"
        android:id="@+id/notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/cardview_shadow_end_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_notifications_24" />

    <TextView
        android:id="@+id/greeting_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baumans"
        android:text="Hello, YourName!"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/open_panel" />

    <SearchView
        android:id="@+id/search_courses"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="#383C3F41"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting_message" />

    <Button
        android:id="@+id/code_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/purple_1"
        android:fontFamily="@font/baumans"
        android:text="@string/code"
        app:cornerRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_courses" />

    <Button
        android:id="@+id/art_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/purple_1"
        android:fontFamily="@font/baumans"
        android:text="@string/art"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toStartOf="@+id/math_button"
        app:layout_constraintStart_toEndOf="@+id/code_button"
        app:layout_constraintTop_toBottomOf="@+id/search_courses" />

    <Button
        android:id="@+id/math_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/purple_1"
        android:fontFamily="@font/baumans"
        android:text="@string/math"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_courses" />

    <TextView
        android:id="@+id/allcourses_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baumans"
        android:text="@string/allcourses"
        android:textColor="@color/light"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code_button" />

    <Button
        android:id="@+id/course_two"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="JavaScript"
        app:cornerRadius="15dp"
        app:icon="@drawable/icons8_javascript"
        app:iconGravity="textTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/course_one"
        app:layout_constraintTop_toBottomOf="@+id/allcourses_button" />

    <Button
        android:id="@+id/course_four"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="C#"
        app:cornerRadius="15dp"
        app:icon="@drawable/icons8_________c_sharp__1_"
        app:iconGravity="textTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/course_one"
        app:layout_constraintTop_toBottomOf="@+id/course_two" />

    <Button
        android:id="@+id/course_one"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/purple_500"
        android:text="Unity"
        app:cornerRadius="15dp"
        app:icon="@drawable/icons8_unity"
        app:iconGravity="textTop"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toStartOf="@+id/course_two"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allcourses_button" />

    <Button
        android:id="@+id/course_three"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="C++"
        app:cornerRadius="15dp"
        app:icon="@drawable/icons8_c____1_"
        app:iconGravity="textTop"
        app:layout_constraintEnd_toStartOf="@+id/course_four"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_one" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/course_three"
        app:layout_constraintVertical_bias="0.9">

        <ImageButton
            android:contentDescription="@string/for_profile_button"
            android:id="@+id/pprofile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/cardview_shadow_start_color"
            app:srcCompat="@drawable/proff" />

        <ImageButton
            android:contentDescription="@string/for_map_button"
            android:id="@+id/mmap_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/cardview_shadow_start_color"
            app:srcCompat="@drawable/mapka" />

        <ImageButton
            android:contentDescription="@string/for_messages_button"
            android:id="@+id/mmessage_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/cardview_shadow_start_color"
            app:srcCompat="@drawable/mailma" />

        <ImageButton
            android:contentDescription="@string/for_settings_button"
            android:id="@+id/ssettings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/cardview_shadow_start_color"
            app:srcCompat="@drawable/sett" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>