<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/vertic"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        tools:srcCompat="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:text="Student"
        android:textColor="@color/light"
        android:textSize="20sp" />

    <Switch
        android:id="@+id/night_theme"
        style="@style/TextAppearance.Compat.Notification.Info"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/avatar"
        android:autoSizeTextType="uniform"
        android:ellipsize="end"
        android:fontFamily="@font/baumans"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:thumb="@drawable/nighttt" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/avatar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/baumans"
        android:text="YourName"
        android:textColor="@color/light"
        android:textSize="34sp" />

    <ImageButton
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/cardview_shadow_end_color"
        app:srcCompat="@drawable/outline_clear_24" />

    <Button
        android:id="@+id/home_button"
        android:layout_width="@dimen/width_button"
        android:layout_height="@dimen/height_button_panel"
        android:layout_below="@+id/status"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#3854099D"
        android:fontFamily="@font/baumans"
        android:gravity="center|left"
        android:paddingLeft="16dp"
        android:text="@string/home"
        android:textSize="@dimen/text_size"
        app:cornerRadius="15dp"
        app:icon="@drawable/baseline_home_24" />

    <Button
        android:id="@+id/profile_button"
        android:layout_width="@dimen/width_button"
        android:layout_height="@dimen/height_button_panel"
        android:layout_below="@+id/home_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#3854099D"
        android:fontFamily="@font/baumans"
        android:gravity="center|start"
        android:paddingLeft="16dp"
        android:text="@string/profile"
        android:textSize="@dimen/text_size"
        app:cornerRadius="15dp"
        app:icon="@drawable/baseline_supervised_user_circle_24" />

    <Button
        android:id="@+id/tasks_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button_panel"
        android:layout_below="@+id/profile_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#3854099D"
        android:fontFamily="@font/baumans"
        android:gravity="center|start"
        android:paddingLeft="16dp"
        android:text="@string/tasks"
        android:textSize="@dimen/text_size"
        app:cornerRadius="15dp"
        app:icon="@drawable/baseline_task_alt_24" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button_panel"
        android:layout_below="@+id/tasks_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#3854099C"
        android:fontFamily="@font/baumans"
        android:gravity="center|start"
        android:paddingLeft="16dp"
        android:text="@string/settings"
        android:textSize="@dimen/text_size"
        app:cornerRadius="15dp"
        app:icon="@drawable/baseline_settings_24" />

    <Button
        android:id="@+id/help_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button_panel"
        android:layout_below="@+id/settings_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#3854099C"
        android:fontFamily="@font/baumans"
        android:gravity="center|start"
        android:paddingLeft="16dp"
        android:text="@string/help"
        android:textSize="@dimen/text_size"
        app:cornerRadius="15dp"
        app:icon="@drawable/baseline_help_24" />

    <ImageButton
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/help_button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/cardview_shadow_end_color"
        app:srcCompat="@drawable/baseline_logout_24" />

</RelativeLayout>